--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <!-- <script src="script.js"></script>
     <script src="basic_operators.js"></script> -->
     <script src="coding_challenge2.js"></script>
+    <script src="functions.js"></script>
 </body>
 </html>
