--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body></body>
     <!-- <script src="script.js"></script>
     <script src="basic_operators.js"></script> -->
-    <script src="coding_challenge2.js"></script>
-    <script src="functions.js"></script>
+    <!-- <script src="coding_challenge2.js"></script>
+    <script src="functions.js"></script> -->
+    <script src="arrays.js"></script>
 </body>
 </html>
