--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="basic_operators.js"></script> -->
     <!-- <script src="coding_challenge2.js"></script>
     <script src="functions.js"></script> -->
-    <script src="arrays.js"></script>
+    <!-- <script src="arrays.js"></script> -->
+    <!-- <script src="ft_putchar_in.js"></script> -->
+    <script src="coding.js"></script>
 </body>
 </html>
