Updated Coding Challenge

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="functions.js"></script> -->
     <!-- <script src="arrays.js"></script> -->
     <!-- <script src="ft_putchar_in.js"></script> -->
-    <script src="coding.js"></script>
+    <!-- <script src="coding.js"></script> -->
+    <script src="coding2.js"></script>
 </body>
 </html>
