--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <!-- <script src="arrays.js"></script> -->
     <!-- <script src="ft_putchar_in.js"></script> -->
     <!-- <script src="coding.js"></script> -->
-    <script src="coding2.js"></script>
+    <!-- <script src="coding2.js"></script> -->
+    <!-- <script src="coding3.js"></script> -->
+    <!-- <script src="coding4.js"></script> -->
+    <script src="coding5.js"></script>
+    <script src="coding5_2.js"></script>
 </body>
 </html>
