--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- <script src="coding2.js"></script> -->
     <!-- <script src="coding3.js"></script> -->
     <!-- <script src="coding4.js"></script> -->
-    <script src="coding5.js"></script>
-    <script src="coding5_2.js"></script>
+    <!-- <script src="coding5.js"></script>
+    <script src="coding5_2.js"></script> -->
+    <!-- <script src="constructors.js"></script> -->
+    <script src="closures.js"></script>
 </body>
 </html>
